--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.0",
     "object-assign": "4.1.1",
     "promise": "8.0.1",
     "react": "^16.4.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
     "react-spinkit": "^3.0.0",
+    "redux": "^4.0.0",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
